# QtProcessPlanner

./: .gitmodules  CMakeLists.txt  README.md  build_apk.sh
cmake/: qt-android-mk-apk.cmake
db/: db.json
images/: images.qrc
qml/: ActionButton.qml  EditEquipment.qml  EditEquipmentForm.ui.qml  Equipment.qml  EquipmentDataFields.qml  EquipmentForm.ui.qml  FlowSubStepDataField.qml  FlowsEditSubStep.qml  FlowsForm.ui.qml  FlowsFormListControls.qml  FlowsNewStep.qml  FlowsNewSubStep.qml  HomeForm.ui.qml  HomeFormActionButton.qml  NewEquipment.qml  NewEquipmentCategory.qml  NewEquipmentCategoryForm.ui.qml  NewEquipmentForm.ui.qml  NewEquipmentLocation.qml  NewEquipmentLocationForm.ui.qml  TreeDelegate.qml  main.qml  qml.qrc
qml/extensions/: ColumnHelper.js  FileIO.qml
src/: CMakeLists.txt  HomeForm.ui.qml  Page1Form.ui.qml  Page2Form.ui.qml  fileio.cpp  fileio.h  fileio_plugin.cpp  fileio_plugin.h  main.cpp  main.qml  treeitem.cpp  treeitem.h  treemodel.cpp  treemodel.h
