cmake_minimum_required(VERSION 3.1)

project(QtProcessPlanner LANGUAGES CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include(cmake/qt-android-mk-apk.cmake)

add_subdirectory(src)

message(STATUS "CMAKE_CURRENT_BINARY_DIR: ${CMAKE_CURRENT_BINARY_DIR}")
message(STATUS "CMAKE_CURRENT_SOURCE_DIR: ${CMAKE_CURRENT_SOURCE_DIR}")

if(ANDROID)
qt_android_build_apk(
    TARGET ${PROJECT_NAME}
    PACKAGE_NAME QtProcessPlanner
    QML_ROOT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/qml
    ANDROID_EXTRA_FILES ${CMAKE_CURRENT_SOURCE_DIR}/images ${CMAKE_CURRENT_SOURCE_DIR}/db
)
endif()



